feat: implement sql checker routes
